--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Gestao de Patrimonio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Senai</title>
+    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="C:\Users\nucleo\Documents\Gestao_Patrimonio\img\Group.png">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.3/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.3/addons/p5.sound.min.js"></script>
+
 </head>
+
+</head>
+
 <body>
+
+    <script src="Tela.js"></script>
+
+    <nav class="layout">
+        <div class="btn">
+            <i class="logo"></i>
+
+        </div>
+
+        <li class="screen">
+            <a href="#">
+                <img src="C:\Users\nucleo\Documents\Gestao_Patrimonio\img\Group.png">
+                <li>Seja Bem Vindo</li>
+                <span class="txt_link">Gestao de Patrimonio</span>
+            </a>
+        </li>
+
+       
+
+
+
+    </nav>
+
     
+    <div>
+        <button class="btn">Senai</button>
+    </div>
+
 </body>
+
+</html>
 </html>
